--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,19 +6,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/history": "^4.7.11",
     "@types/jest": "^27.5.0",
     "@types/node": "^16.11.33",
     "@types/react": "^17.0.1",
     "@types/react-calendar": "^3.5.0",
     "@types/react-dom": "^17.0.1",
-    "@types/react-router-dom": "^5.3.2",
-    "axios": "^0.27.2",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.21.4",
+    "history": "^4.10.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "typescript": "^4.6.4",
